Add errors & workaroufn section
With the first error referenced being an illegal acces of Retrofit
occuring on JDK16-openJ9.